@@ -27,6 +27,7 @@ CONFIGUREARGS := --libdir=/usr/lib --libexecdir=/usr/lib \
 		--enable-ldap \
 		--enable-led \
 		--enable-lookip \
+		--enable-mediation \
 		--enable-openssl \
 		--enable-pkcs11 \
 		--enable-test-vectors \
@@ -42,8 +43,8 @@ CONFIGUREARGS := --libdir=/usr/lib --libexecdir=/usr/lib \
 	# Don't --enable-cisco-quirks, because some other IPsec implementations
 	# (most notably the Phion one) have problems connecting when pluto 
 	# sends these Cisco options.
-	# don't enable mediation right now (20160523) since clearsilver FTBFS
-	#--enable-mediation --enable-medsrv --enable-medcli \
+	# don't enable medsrv/medcli right now (20160523) since clearsilver FTBFS
+	#--enable-medsrv --enable-medcli \
 
 # get the various DEB_BUILD/DEB_HOST variables
 include /usr/share/dpkg/architecture.mk
