@@ -1,5 +1,6 @@
 strongswan (5.5.1-3) UNRELEASED; urgency=medium
 
+  [ Christian Ehrhardt ]
   * d/rules: Reorganize to ease maintenance
     - one enable option per line
     - sort enable options
@@ -16,6 +17,10 @@ strongswan (5.5.1-3) UNRELEASED; urgency=medium
     - debian/{rules,strongswan.logcheck}: Add updated logcheck rules
     - this does no more provide different logcheck levels, but marks all
       common output to be acceptable
+
+  [ Yves-Alexis Perez ]
+  * debian/rules:
+    - re-enable mediation (but not medcli/medsrv)               closes: #851507
 
  -- Christian Ehrhardt <christian.ehrhardt@canonical.com>  Tue, 20 Dec 2016 13:01:29 +0100
 
